<resources>
    <string name="app_name">VK Photon</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Logout</string>
    <string name="logout">Are you sure, you want to logout?</string>
    <string name="title_of_album">Title</string>
    <string name="request_write_permission">App request wtire external permission</string>
    <string name="count_of_photos_in_album">%d</string>
    <string name="service_connecting_error">Service is connecting</string>
    <string name="sync_album">Synchronize album</string>
    <string name="download_album">Download album</string>
    <string name="download_photo">Download photo</string>
    <string name="upload_album">Upload album</string>
    <string name="upload_photo">Upload photo</string>
    <string name="add_album_description">Description</string>
    <string name="st_btn_ok">OK</string>
    <string name="st_btn_cancel">Cancel</string>
    <string name="sync_delete_album">Delete Album</string>
    <string name="privacy">Privacy settings</string>
    <string name="count_of_photos">%d photos in album</string>
    <string name="sync_photo">Synchronize photo</string>
    <string name="select_all">Select all</string>
    <string name="sync_delete_photos">Delete photos</string>
    <string name="edit_photo_title">Edit photo</string>
    <string name="sync_delete_photo_question">Delete photo?</string>
    <string name="sync_delete_photos_question">Delete photos?</string>
    <string name="create_album">Create album</string>
    <string name="edit_album">Edit album</string>
    <string name="edit_privacy">Edit privacy</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="load_list_local_albums">Load List Local Albums</string>
    <string name="please_wait">Please wait…</string>
    <string name="select_album">Select album</string>
    <plurals name="count_of_albums">
        <item quantity="one">You have %d albums</item>
        <item quantity="other">You have %d albums</item>
    </plurals>

    <plurals name="synchronize_album_question">
        <item quantity="one">Synchronize %d album?</item>
        <item quantity="other">Synchronize %d albums?</item>
    </plurals>
    <item name="position_key" type="id" />
    <string name="count_of_albums">%d albums</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sync_delete_album_question">Delete album?</string>
    <string name="sync_delete_albums_question">Delete albums?</string>
    <plurals name="sync_delete_albums_question_title">
        <item quantity="one">Delete album?</item>
        <item quantity="other">Delete albums?</item>
    </plurals>
    <plurals name="sync_delete_album_question_content_1">
        <item quantity="one">The album</item>
        <item quantity="other">Albums</item>
    </plurals>
    <plurals name="sync_delete_album_question_content_2">
        <item quantity="one">will be completely removed!\nAre you sure?</item>
        <item quantity="other">will be completely removed!\nAre you sure?</item>
    </plurals>

    <string name="delete">Delete</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General settings</string>

    <string name="pref_title_sync_device">Enable synchronization</string>
    <string name="pref_description_sync_device">Synchronization with device</string>

    <string name="make_album_title">Make album</string>
    <string name="make_album_summary">Make your album</string>
    <string name="pref_default_album">My album</string>

    <string name="edit_album_title">Edit album</string>
    <string name="edit_album_summary">Edit your album</string>

    <string name="delete_album_title">Delete album</string>
    <string name="delete_album_summary">Delete selected album</string>

    <string name="access_control_title">Access control</string>
    <string name="access_control_summary">Choose album accessibility</string>
    <string name="access_control_current_settings">Current settings:</string>
    <string-array name="pref_example_list_titles">
        <item>Everybody</item>
        <item>Friends only</item>
        <item>Only me</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_list_languages_titles">Current settings:</string>
    <string-array name="pref_list_languages">
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <!-- Settings for Data & Sync -->
    <string name="pref_sync_category_key">Sync settings</string>

    <string name="pref_sync_category_name">Sync settings</string>
    <string name="pref_sync_frequency_default_value">15</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>1 day</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notifications settings</string>

    <string name="pref_new_message_notifications_title">New message notifications</string>

    <string name="pref_ringtone_title">Ringtone</string>
    <string name="pref_rington_summary">Select a ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="icon_heart" translatable="false">&#xf004;</string>
    <string name="microphone">Microphone</string>
    <string name="remove">Remove</string>

    <string name="pref_title_display_settings">Display settings</string>
    <!--<string name="pref_description_display_settings">Display settings</string>-->

    <string name="pref_title_notification_settings">Notification settings</string>
    <!--<string name="pref_description_notification_settings">Notification settings</string>-->

    <string name="pref_title_sync_settings">Sync settings</string>
    <string name="enable_fab">Enable floating action button</string>
    <string name="language">Language</string>
    <string name="pref_dialog_title_language">Choose language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="no_internet_connection_error">No internet connection</string>
    <string name="album_not_created_error">Create of album failed</string>
    <string name="photo_not_saved_error">Error downloading photo</string>
    <string name="photo_not_uploaded_error">Error uploading photo</string>
    <string name="userReply">replied to</string>
    <string name="synchronize">Synchronize</string>
    <string name="comments_ntf">Comments notifications</string>
    <string name="likes_ntf">Likes notifications</string>
    <string name="sync_success_ntf">Sync success notifications</string>
    <string name="vibro_with_ntf">Vibration with notifications</string>
    <string name="auto_sync">Auto synchronization</string>
    <string name="sync_frequency">Sync frequency</string>
    <string name="min_15">15 minutes</string>
    <string name="min_30">30 minutes</string>
    <string name="hour">1 hour</string>
    <string name="hours_3">3 hours</string>
    <string name="hours_6">6 hours</string>
    <string name="day">1 day</string>
    <string name="never">Never</string>
    <string name="tv_privacy">Who can see this album?</string>
    <string name="rg_privacy_everybody">Everybody</string>
    <string name="rg_privacy_friends_only">Friends only</string>
    <string name="rg_privacy_friends_and_friends_of_friends">Friends and friends of friends</string>
    <string name="rg_privacy_only_me">Only me</string>

    <string name="camera_permission_explanation">Add camera permission</string>

    <string name="sync_on_opening">Sync on opening App</string>
    <string name="sync_photo_question">Synchronize photo?</string>
    <string name="sync_photos_question">Synchronize photos?</string>
    <string name="sync">Synchronize</string>
    <string name="photos_synched">Photos synchronized!</string>
    <string name="photos_synched_error">Synchronization error! Try again!</string>
    <string name="pref_sync_enabled_key">sync_enabled</string>
    <string name="cancel_album_sync">Cancel sync</string>

</resources>
