<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:defaultValue="true"
        android:key="display_settings"
        android:title="@string/pref_title_display_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cb_enable_fab"
            android:title="@string/enable_fab" />

        <com.khasang.vkphoto.presentation.model.MaterialListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/pref_dialog_title_language"
            android:entries="@array/pref_list_languages"
            android:entryValues="@array/pref_list_languages"
            android:key="cb_language"
            android:title="@string/language" />

    </PreferenceCategory>

    <com.jenzz.materialpreference.PreferenceCategory
        android:defaultValue="true"
        android:key="notification_settings"
        android:title="@string/pref_title_notification_settings" />

    <com.jenzz.materialpreference.PreferenceCategory
        android:defaultValue="true"
        android:key="sync_settings"
        android:title="@string/pref_title_sync_settings" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="sync_device_switch"
        android:summary="@string/pref_description_sync_device"
        android:title="@string/pref_title_sync_device" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_album"
        android:inputType="textCapWords"
        android:key="make_album_edit_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/make_album_summary"
        android:title="@string/make_album_title" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="edit_album_edit_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/edit_album_summary"
        android:title="@string/edit_album_title" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="access_control_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/access_control_summary"
        android:title="@string/access_control_title" />

</PreferenceScreen>
