<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vk_white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RadioGroup
        android:id="@+id/rg_sync_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_15" />

        <RadioButton
            android:id="@+id/rb_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_30" />

        <RadioButton
            android:id="@+id/rb_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour" />

        <RadioButton
            android:id="@+id/rb_3_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours_3" />


        <RadioButton
            android:id="@+id/rb_6_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours_6" />

        <RadioButton
            android:id="@+id/rb_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day" />

        <RadioButton
            android:id="@+id/rb_never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/never" />
    </RadioGroup>

</RelativeLayout>