<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/tv_privacy_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_privacy" />

    <RadioGroup
        android:id="@+id/rg_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_privacy_question">

        <RadioButton
            android:id="@+id/rb_album_privacy_everybody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rg_privacy_everybody"/>

        <RadioButton
            android:id="@+id/rb_album_privacy_friends_only"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rg_privacy_friends_only"/>

        <RadioButton
            android:id="@+id/rb_album_privacy_friends_and_friends_of_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rg_privacy_friends_and_friends_of_friends"/>

        <RadioButton
            android:id="@+id/rb_album_privacy_only_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rg_privacy_only_me"/>

    </RadioGroup>


</RelativeLayout>