<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".presentation.activities.MainActivity">
    <item
        android:id="@+id/action_sync_album"
        android:icon="@android:drawable/stat_notify_sync"
        android:orderInCategory="100"
        android:title="@string/sync_album"
        app:showAsAction="always" />
<!--    <item
        android:id="@+id/action_upload_album"
        android:icon="@drawable/ic_file_upload_white_24dp"
        android:orderInCategory="100"
        android:title="@string/upload_album"
        app:showAsAction="always" />-->
    <item
        android:id="@+id/action_edit_album"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="100"
        android:title="@string/edit_album_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_album"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/sync_delete_album"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="always" />

</menu>
