<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:key="@+id/general_settings"
        android:fragment="com.khasang.vkphoto.ui.activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_general_color_26dp"
        android:title="@string/pref_header_general"
        android:text="@string/icon_heart"/>

    <header
        android:key="@+id/notification_settings"
        android:fragment="com.khasang.vkphoto.ui.activities.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notific_color_26dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:key="@+id/sync_settings"
        android:fragment="com.khasang.vkphoto.ui.activities.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_color_26dp"
        android:title="@string/pref_header_data_sync" />
</preference-headers>
