<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:defaultValue="true"
        android:key="notification_settings"
        android:title="@string/pref_title_notification_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cb_comments_ntf"
            android:title="@string/comments_ntf" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cb_likes_ntf"
            android:title="@string/likes_ntf" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cb_sync_success_ntf"
            android:title="@string/sync_success_ntf" />
<!--
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cb_vibration"
            android:title="@string/vibro_with_ntf" />
-->
    </PreferenceCategory>

    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="notifications_new_message"-->
        <!--android:title="@string/pref_new_message_notifications_title" />-->
    <!--<RingtonePreference-->
        <!--android:defaultValue="content://settings/system/notification_sound"-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="notifications_new_message_ringtone"-->
        <!--android:ringtoneType="notification"-->
        <!--android:summary="@string/pref_rington_summary"-->
        <!--android:title="@string/pref_ringtone_title" />-->
    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="notifications_new_message_vibrate"-->
        <!--android:title="@string/pref_title_vibrate" />-->
</PreferenceScreen>
