<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.activities.MainActivity">
    <item
        android:id="@+id/action_sync_album"
        android:icon="@android:drawable/stat_notify_sync"
        android:orderInCategory="100"
        android:title="@string/sync_album"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_privacy"
        android:icon="@drawable/ic_lock_outline_white_24dp"
        android:orderInCategory="100"
            android:title="@string/privacy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_album"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="100"
        android:title="@string/sync_delete_album"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_album"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/sync_delete_album"
        app:showAsAction="always" />

</menu>
