<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vk_grey_color"
    tools:context="info.androidhive.materialtabs.fragments.OneFragment">

    <TextView
        android:id="@+id/tv_count_of_albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:text="@string/count_of_albums"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/vk_white"
        android:layout_below="@+id/tv_count_of_albums"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:src="@drawable/box" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_of_album"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_of_photos_in_album"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>